--- a/core/app/views/Inbounds/edit.html
+++ b/core/app/views/Inbounds/edit.html
@@ -44,7 +44,7 @@
         <td><input type="date" name="inbound.receiveDate" value="${inbound.receiveDate.date()}" required></td>
         <th>B2B选项</th>
         <td>
-          <label class="checkbox">
+          <label class="checkbox inline">
             <input type="checkbox" name="inbound.isb2b" value="true" #{if inbound.projectName=='B2B'} checked #{/if}> B2B
           </label>
         </td>
