--- a/core/app/views/ProcureUnits/indexWhouse.html
+++ b/core/app/views/ProcureUnits/indexWhouse.html
@@ -65,6 +65,15 @@
           <option ${cop.id == p.cooperatorId ? 'selected' : ''} value="${cop.id}">${cop.name}</option>
         #{/list}
         </select>
+
+        <select name="p.projectName" class="inline">
+          <option value="">项目名称</option>
+        #{list items:models.view.post.ProcurePost.P, as:'n'}
+          <option ${n.name() == p.projectName ? 'selected' : ''} value="${n.name()}">${n.label()}</option>
+        #{/list}
+        </select>
+
+
         <div class="input-prepend input-append inline">
           <span class="add-on"><i class="icon-search"></i></span>
           <input type="text" style="width:300px;" class="input-medium" name="p.search" placeholder="出货单ID or sellingId or SKU"
