增加权限控制

--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -208,19 +208,27 @@
                   <li><a href="@{Whouses.index()}">仓库</a></li>
                 #{/power.ck}
               <li class="divider"></li>
-              <li><a href="@{DeliverPlans.indexwhouse()}">出货单关联收货</a></li>
+                #{power.ck 'deliverplans.indexwhouse'}
+                  <li><a href="@{DeliverPlans.indexwhouse()}">出货单关联收货</a></li>
+                #{/power.ck}
                 #{power.ck "procures.indexwhouse"}
                   <li><a href="@{ProcureUnits.indexWhouse()}">采购计划(仓库)</a></li>
                 #{/power.ck}
-              <li><a href="@{Inbounds.index()}">收货入库单</a></li>
+                #{power.ck 'inbounds.index'}
+                  <li><a href="@{Inbounds.index()}">收货入库单</a></li>
+                #{/power.ck}
                 #{power.ck "outbounds.index"}
                   <li><a href="@{Outbounds.index()}">出库单</a></li>
                 #{/power.ck}
-              <li><a href="@{Refunds.index()}">退货单</a></li>
+                #{power.ck 'refunds.index'}
+                  <li><a href="@{Refunds.index()}">退货单</a></li>
+                #{/power.ck}
                 #{power.ck "products.whouseattrs"}
                   <li><a href="@{Products.whouseAttrs()}">产品</a></li>
                 #{/power.ck}
-              <li><a href="@{StockRecords.stockIndex()}">库存</a></li>
+                #{power.ck 'whouseitems.index'}
+                  <li><a href="@{StockRecords.stockIndex()}">库存</a></li>
+                #{/power.ck}
                 #{power.ck "stockrecords.index"}
                   <li><a href="@{StockRecords.index()}">库存异动</a></li>
                 #{/power.ck}
