--- a/core/app/views/Shipments/index.html
+++ b/core/app/views/Shipments/index.html
@@ -103,7 +103,7 @@
       <a href="javascript:void(0)" data-url="@{Excels.shipmentDetails()}" id="download_excel" class="btn btn-primary">
         <i class="icon-download-alt"></i>导出运输单发货明细excel</a>
 
-    #{power.ck 'outboundrecords.index'}
+    #{power.ck 'outbounds.index'}
       <a href="javascript:void(0)" data-url="@{Shipments.outbound()}" class="btn btn-primary" id="outboundBtn">
         创建出库单
       </a>
