--- a/core/app/views/Outbounds/_units.html
+++ b/core/app/views/Outbounds/_units.html
@@ -33,7 +33,7 @@
         </td>
       #{/if}
     <td>${unit.id}</td>
-    <td>${unit.deliveryment.id}</td>
+    <td>${unit.deliveryment?.id}</td>
     <td>${unit.selling?.sellingId}</td>
     <td>${unit.product.sku}</td>
     <td title="${unit.product.abbreviation}">${unit.product.abbreviation.overLong()}</td>
