--- a/core/app/views/Refunds/index.html
+++ b/core/app/views/Refunds/index.html
@@ -104,7 +104,7 @@
           <td>${r.whouseUser?.username}</td>
           <td title="${r.memo}">${r.memo}</td>
         </tr>
-        <tr id="ptt_${r_index}" style="display:none;">
+        <tr id="ptt_${r_index}" style="display:none; background-color:#F2F2F2">
           <td colspan="12">
             <div>
                 #{render 'Refunds/_units.html', units:r.unitList, is_check: false/}
