不良品处理开发

--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -232,6 +232,10 @@
                 #{power.ck "stockrecords.index"}
                   <li><a href="@{StockRecords.index()}">库存异动</a></li>
                 #{/power.ck}
+                #{power.ck "refunds.unqualifiedindex"}
+                  <li><a href="@{Refunds.unQualifiedIndex()}">不良品处理</a></li>
+                #{/power.ck}
+
             </ul>
           </li>
         #{/power.ck}
