--- a/core/app/views/ProcureUnits/_splitOnSelling.html
+++ b/core/app/views/ProcureUnits/_splitOnSelling.html
@@ -58,7 +58,12 @@
 <tr>
   <th><i class="icon-asterisk" style="color:red"></i>预计交货时间</th>
   <td>
+  #{if unit.stage.name()=='IN_STORAGE'}
+    <input type="date" name="newUnit.attrs.planDeliveryDate" value="${unit.attrs.planDeliveryDate.date()}" readonly>
+  #{/if}
+  #{else }
     <input type="date" name="newUnit.attrs.planDeliveryDate" value="${newUnit.attrs.planDeliveryDate.date()}" required>
+  #{/else}
   </td>
   <th>预计运输时间</th>
   <td>
