库存异动页面调整以及创建库存异动记录逻辑修改

--- a/core/app/views/Sellings/index.html
+++ b/core/app/views/Sellings/index.html
@@ -98,7 +98,7 @@
           #{/if}
       </td>
       <td>${(p.page-1)*p.perSize + s_index}</td>
-      <td>${s.sellingId}</td>
+      <td><a href="@{Sellings.selling(s.sellingId)}" target="_blank">${s.sellingId}</a></td>
       <td>${s.listing?.product?.sku}</td>
       <td>${s.market.countryName()}</td>
       <td>${s.aps.salePrice}</td>
