--- a/core/app/views/Deliveryments/show.html
+++ b/core/app/views/Deliveryments/show.html
@@ -176,15 +176,12 @@
           <th>交货地址</th>
           <td colspan="7">
           <textarea rows="3" class="span12" name="excel.deliveryAddress" id="excel_deliveryAddress">
-            收货时间：法定工作日8：30-12：00   13：30-18：00，工作日其他时间到货请提前1小时联系。
-
-            仓库地址：深圳市光明新区玉律村汉海达科技创新园1栋A区6楼
-
-            电      话：0755-21383192-8060/8061
-
-            收货联系人：杨上德：13724219110（保护类、蓝牙类）
-                      旷   杰：18692275630（仓管）
-                      方   圆：15974143832（经理）
+            收货时间：法定工作日 8:30-12:00  13:30-18:00，工作日其他时间到货请提前 1 小时联系。
+            仓库地址：深圳市光明新区玉律村汉海达科技创新园 1 栋 A 区 6 楼
+            电   话：0755-21383192-8060/8061
+            收货联系人：
+                    杨上德：13724219110
+                    方  圆：15974143832（经理）
           </textarea>
           </td>
         </tr>
