采购计划添加 是否进入 未请款金额 功能

--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -249,15 +249,18 @@
                       分拆
                     </a>
                   #{/power.ck}
-                <!-- 确认到货代处 -->
+                <!-- 确认到    货代处 -->
                   #{if unit.selling}
                       #{ifnot unit.isPlaced}
                         <a data-remote='true' data-method='PUT' class="btn btn-small btn-info" id="isplaced_${unit.id}_btn"
                            href="@{ProcureUnits.markPlace(unit.id)}" data-disable-with='更新中'>抵达货代</a>
                       #{/ifnot}
                   #{/if}
-                <a href="javascript:void(0)" class="btn btn-small btn-warning" data-href="@{ProcureUnits.confirmUnit(unit.id)}"
-                   name="confirmUnitBtn" data-tragettr="procureUnit_${unit.id}">已核单</a>
+                <a href="javascript:void(0)" class="btn btn-small btn-warning" data-tragettr="procureUnit_${unit.id}"
+                   data-href="@{ProcureUnits.confirmUnit(unit.id)}" name="confirmUnitBtn">已核单</a>
+                <a href="javascript:void(0)" class="btn btn-small ${unit.noPayment?'btn-success':'btn-danger'}"
+                   data-tragettr="procureUnit_${unit.id}" data-href="@{ProcureUnits.noPayment(unit.id)}" name="noPaymentBtn"
+                   rel='tooltip' title='因各种原因而不需要纳入 未进请款单金额 统计'>${unit.noPayment?'统计':'不统计'}</a>
               </div>
                 #{if unit.fba}
                     #{power.ck 'fbas.update'}
