--- a/core/app/views/ReportDownloads/applyReportsIndex.html
+++ b/core/app/views/ReportDownloads/applyReportsIndex.html
@@ -169,3 +169,84 @@
   </div>
 </div>
 
+<div class="row-fluid">
+  <div class="span12">
+    <div class="bs-docs-form">
+      <form class="search_form" action="@{Excels.purchasePaymentReport()}" target="_blank" method="post">
+        <div class="inline" style="margin-top:4px;">
+          <span class="label label-info">采购应付未付款报表:</span>
+        </div>
+
+        <div class="input-prepend input-append inline" style="margin-left:10px;">
+          <span class="add-on">From:</span>
+          <input type="date" name="p.from" value="${helper.Dates.aMonthAgo().date()}">
+          <span class="add-on">To:</span>
+          <input type="date" name="p.to" value="${new org.joda.time.DateTime()}">
+        </div>
+
+        <div class="input-prepend input-append inline" style="margin-left:10px;">
+          <span class="add-on">供应商:</span>
+          <select name="p.cooperatorId" class="inline selectize" style="width:150px;">
+            <option value="">供应商</option>
+          #{list items:cooperators, as:'cop'}
+            <option value="${cop.id}">${cop.name}</option>
+          #{/list}
+          </select>
+        </div>
+
+        <span class="add-on">阶段:</span>
+        <select class="inline" name="p.stage" style="width:80px;">
+          <option value="">ALL</option>
+        #{list items: models.procure.ProcureUnit.STAGE, as: 'm'}
+            #{if m.name()!='APPROVE'}
+              <option value="${m.name()}">${m.label()}</option>
+            #{/if}
+        #{/list}
+        </select>
+        &nbsp;
+        <button class="btn">导出</button>
+      </form>
+    </div>
+  </div>
+</div>
+
+<div class="row-fluid">
+  <div class="span12">
+    <div class="bs-docs-form">
+      <form class="search_form" action="@{Excels.purchasePaymentReport()}" target="_blank" method="post">
+        <div class="inline" style="margin-top:4px;">
+          <span class="label label-info">物流应付未付款报表:</span>
+        </div>
+
+        <div class="input-prepend input-append inline" style="margin-left:10px;">
+          <span class="add-on">From:</span>
+          <input type="date" name="p.from" value="${helper.Dates.aMonthAgo().date()}">
+          <span class="add-on">To:</span>
+          <input type="date" name="p.to" value="${new org.joda.time.DateTime()}">
+        </div>
+
+        <div class="input-prepend input-append inline" style="margin-left:10px;">
+          <span class="add-on">供应商:</span>
+          <select name="p.cooperatorId" class="inline selectize" style="width:150px;">
+            <option value="">供应商</option>
+          #{list items:cooperators, as:'cop'}
+            <option value="${cop.id}">${cop.name}</option>
+          #{/list}
+          </select>
+        </div>
+
+        <span class="add-on">阶段:</span>
+        <select class="inline" name="p.stage" style="width:80px;">
+          <option value="">ALL</option>
+        #{list items: models.procure.ProcureUnit.STAGE, as: 'm'}
+            #{if m.name()!='APPROVE'}
+              <option value="${m.name()}">${m.label()}</option>
+            #{/if}
+        #{/list}
+        </select>
+        &nbsp;
+        <button class="btn">导出</button>
+      </form>
+    </div>
+  </div>
+</div>
